--- a/microblog.css
+++ b/microblog.css
@@ -1,1 +1,13 @@
-/* CSS declarations go here */
+body {
+	padding-top: 50px;
+}
+
+.post {
+	padding: 10px;
+	border: solid 1px #DDD;
+}
+.post:nth-child(even) {
+}
+.post:nth-child(odd) {
+	background-color: #DDD;
+}
